clazz.netInstance is Deprecated replaced by clazz.getDeclaredConstructor().newInstance()