@@ -79,7 +79,7 @@ public class LockAutoConfiguration {
         }
 
         Codec codec = (Codec) ClassUtils.forName(lockConfigRedis.getCodec(),
-            ClassUtils.getDefaultClassLoader()).newInstance();
+            ClassUtils.getDefaultClassLoader()).getDeclaredConstructor().newInstance();
         config.setCodec(codec);
         config.setEventLoopGroup(new NioEventLoopGroup());
 
